# fastapi-sveltekit-template

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: main.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/: hooks.ts
frontend/src/routes/: index.svelte
frontend/src/routes/todos/: _api.ts  index.svelte
