[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["George Ungureanu Vranceanu <gungureanuvranceanu@gmail.com>"]

[tool.poetry.scripts]
dev = "backend.main:dev"
start = "backend.main:start"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.71.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
